--- a/.github/workflows/teste.yml
+++ b/.github/workflows/teste.yml
@@ -1,10 +1,13 @@
 name: CI
 
 on:
+  pull_request:
+    types: [labeled]
   workflow_dispatch:
 
 jobs:
   build:
+    if: contains( github.event.label.name , 'build xxx') 
     runs-on: ubuntu-latest
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
